Mac: De-Cocoa ShareMenuController

We managed to miss the fact that ShareMenuController's transition animation
data was dependent on Cocoa browser windows. This change uses Views APIs
to get the content area's rect and screengrab instead.

Bug: 890355
Change-Id: Ifa86782902e24985228a423510b65b5a58ef37b5
Reviewed-on: https://chromium-review.googlesource.com/1252245
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595469}